test/fail/inherits-method.grace
method name {}

object {
  inherits name
}
